--- a/intex.html
+++ b/intex.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mpassistant</title>
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header class="header">
+            <nav class="header__nav">
+                <div class="header__nav-logo">
+                    <img src="./img/7.svg" alt="logo" class="nav__logo-img">
+                    <p class="nav__logo-text">Аналитика и оцифровка продаж <br><span class="nav__logo-span1">Wildberries</span> и  <span class="nav__logo-span2"> Ozon</span></p>
+                </div>
+                <ul class="header__nav-list">
+                    <a href="" class="header__nav-pagination"><li>О нас</li></a>
+                    <a href="" class="header__nav-pagination"><li>Возможности</li></a>
+                    <a href="" class="header__nav-pagination"><li>Тарифы</li></a>
+                </ul>
+                <div class="header__nav-btns">
+                    <i class="fa-solid fa-arrow-right-to-bracket"></i>
+                    <i class="fa-solid fa-bars-staggered"></i>
+                    <h5 class="header__nav-btns__text">Вход</h5>
+                    <button class="header__nav-btns__btn">Зарегистрироваться</button>
+                </div>
+            </nav>
+            <div class="header__hero">
+                <div class="header__hero-left">
+                    <h1 class="hero__left-title"> <span class="title__span1">Внутренняя аналитика</span> <br> и <span class="title__span2">финансовый учёт</span> для бизнеса <br> на маркетплейсах</h1>
+                    <img src="./img/marketplaces-logos-m 1.png" alt="img" class="hero__left-logo">
+                    <p class="hero__left-subtitle">Увеличивай прибыль, автоматизируй рутину и экономь время <br> на сборе и анализе отчётов</p>
+                    <div class="hero__left-box">
+                        <img src="./img/Group 4.png" alt="img" class="hero__left-box__img1">
+                        <img src="./img/Group 5.png" alt="img" class="hero__left-box__img2">
+                        <p class="hero__left-box__text">Начните свой 3-дневный пробный период <br> с неограниченным доступом ко всем возможностям</p>
+                        <form action="">
+                            <input type="email" placeholder="Введите ваш email" class="hero__left-box__input">
+                            <button class="hero__left-box__btn">Попробовать</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="header__hero-right">
+                    <img src="./img/Ellipse 2.png" alt="img" class="hero__right-elps">
+                    <img src="./img/Group 3.png" alt="img" class="hero__right-img">
+                    <img src="./img/ozon1-min 1.png" alt="ozon" class="hero__right-ozon">
+                    <img src="./img/wb2_1-min 1.png" alt="wb" class="hero__right-wb">
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
